# rpg-engine

./: .gitignore  CharacterInfo.py  DatabaseInspector.py  DatabaseTimestampTriggers.py  ServerMessage.py  app.py  build_and_run.sh  compile_project_files.py  compile_schema_data.py  db_setup.py  filepathRefresh.py  game_data.db  import_log.txt  main.py  reorganizer.py  rpg_data copy.db  rpg_data.db  updatePrerequisiteTypes.py
Arena/: CMakeLists.txt  CODE_ORGANIZATION.md  README.md  cleanup_duplicate_headers.sh  cleanup_plan.md  gdb_debug.txt  remove_duplicate_headers.sh  test_text.cpp  update_cmake_proposal.md
Arena/include/core/: Game.hpp  StackTrace.hpp  Window.hpp
Arena/include/debug/: DebugMenu.hpp  DebugStats.hpp  DebugUtils.hpp  VoxelDebug.hpp
Arena/include/physics/: CollisionSystem.hpp
Arena/include/player/: Player.hpp
Arena/include/render/: TextRenderer.hpp
Arena/include/renderer/: Renderer.hpp  TextureManager.hpp
Arena/include/texture/: TextureManager.hpp
Arena/include/ui/: SplashScreen.hpp
Arena/include/utils/: Random.hpp
Arena/include/world/: Chunk.hpp  ChunkVisibilityManager.hpp  VoxelManipulator.hpp  World.hpp  WorldGenerator.hpp
Arena/resources/: cobblestone.psd  debug.psd
Arena/src/: main.cpp
Arena/src/core/: Game.cpp  StackTrace.cpp  Window.cpp
Arena/src/debug/: DebugMenu.cpp  DebugMenu.h  DebugStats.cpp  DebugUtils.cpp  VoxelDebug.cpp
Arena/src/physics/: CollisionSystem.cpp  CollisionSystem.cpp.bak  CollisionSystem.cpp.section
Arena/src/player/: Player.cpp
Arena/src/render/: TextRenderer.cpp
Arena/src/renderer/: Renderer.cpp  Renderer.cpp.bak  Renderer.hpp  TextureManager.cpp
Arena/src/texture/: TextureManager.cpp
Arena/src/ui/: SplashScreen.cpp
Arena/src/utils/: Random.cpp
Arena/src/world/: Chunk.cpp  Chunk.cpp.old  Chunk.hpp  ChunkVisibilityManager.cpp  ChunkVisibilityManager.hpp  VoxelManipulator.cpp  World.cpp  World.cpp.bak  World.cpp.fixed  World.cpp.new  World.cpp.temp  World.hpp  WorldGenerator.cpp
GameFPS/VoxelGlobe/: CMakeCache.txt  CMakeLists.txt  Makefile  VoxelGlobe  change_executor.py  cmake_install.cmake  config.json  debug_settings.json  debug_window_state.json  imgui.ini
GameFPS/VoxelGlobe/include/: Block.hpp  Chunk.hpp  Debug.hpp  Player.hpp  Renderer.hpp  VoxelManipulator.hpp  World.hpp
GameFPS/VoxelGlobe/include/Core/: Debug.hpp  GameStateManager.hpp  InputHandler.hpp  Types.hpp
GameFPS/VoxelGlobe/include/Debug/: DebugHelper.hpp  DebugManager.hpp  DebugSystem.hpp  DebugWindow.hpp  DebugWindowUtility.hpp  GlobeUpdater.hpp  GodViewDebugTool.hpp  GodViewWindow.hpp  Logger.hpp  Profiler.hpp
GameFPS/VoxelGlobe/include/Graphics/: GraphicsSettings.hpp  MeshGenerator.hpp  ResourceManager.hpp  ShaderManager.hpp
GameFPS/VoxelGlobe/include/Physics/: CollisionSystem.hpp
GameFPS/VoxelGlobe/include/Player/: Inventory.hpp  Movement.hpp  Player.hpp
GameFPS/VoxelGlobe/include/Rendering/: Renderer.hpp
GameFPS/VoxelGlobe/include/UI/: VoxelHighlightUI.hpp
GameFPS/VoxelGlobe/include/Utils/: CoordinateSystem.hpp  PlanetConfig.hpp  SphereUtils.hpp
GameFPS/VoxelGlobe/include/World/: Block.hpp  Chunk.hpp  World.hpp
GameFPS/VoxelGlobe/include/imgui/: imgui.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
GameFPS/VoxelGlobe/src/: Block.cpp  Chunk.cpp  Player.cpp  Renderer.cpp  VoxelManipulator.cpp  World.cpp  main.cpp  stb_image_impl.cpp
GameFPS/VoxelGlobe/src/Core/: GameStateManager.cpp  InputHandler.cpp  main.cpp
GameFPS/VoxelGlobe/src/Debug/: DebugManager.cpp  DebugSystem.cpp  DebugWindow.cpp  DebugWindowGodViewPanel.cpp  GlobeUpdater.cpp  GodViewDebugTool.cpp  GodViewWindow.cpp  Logger.cpp  Profiler.cpp
GameFPS/VoxelGlobe/src/Graphics/: GraphicsSettings.cpp  MeshGenerator.cpp  ResourceManager.cpp  ShaderManager.cpp
GameFPS/VoxelGlobe/src/Player/: Inventory.cpp  Movement.cpp  Player.cpp
GameFPS/VoxelGlobe/src/Rendering/: Renderer.cpp
GameFPS/VoxelGlobe/src/UI/: VoxelHighlightUI.cpp
GameFPS/VoxelGlobe/src/World/: Block.cpp  Chunk.cpp  World.cpp
LLMArena/: CMakeLists.txt  build.bat  build.sh  qt-installer.sh
LLMArena/include/: arena_renderer.h  arena_view.h  character_editor_ui.h  character_persistence.h  game_scene.h  gl_arena_widget.h  memory_system.h  oobabooga_bridge.h  player_controller.h
LLMArena/include/arena/core/: arena_core.h
LLMArena/include/arena/debug/: debug_system.h
LLMArena/include/character/: character_persistence.h
LLMArena/include/debug/: opengl_debug.h
LLMArena/include/game/: game_scene.h  inventory.h  player_controller.h
LLMArena/include/llm/: api_core.h  oobabooga_bridge.h
LLMArena/include/memory/: memory_system.h
LLMArena/include/rendering/: arena_renderer.h  gl_arena_widget.h  voxel_highlight_renderer.h
LLMArena/include/ui/: arena_view.h  character_editor_ui.h  inventory_ui.h
LLMArena/include/utils/: crash_handler.h  opengl_debug.h
LLMArena/include/voxel/: sky_system.h  voxel_renderer.h  voxel_system_integration.h  voxel_types.h  voxel_world.h
LLMArena/src/: arena_renderer.cpp  arena_view.cpp  character_editor.cpp  character_manager.cpp  game_scene.cpp  gl_arena_widget.cpp  gl_arena_widget_signals.cpp  main.cpp  memory_system.cpp  moc_registration.cpp  oobabooga_bridge.cpp  player_controller.cpp
LLMArena/src/arena/game/: inventory.cpp  (+6 more)
LLMArena/src/character/: character_manager.cpp
LLMArena/src/debug/: opengl_debug.cpp
LLMArena/src/game/: game_scene.cpp  player_controller.cpp  player_controller_core.cpp  player_controller_input.cpp  player_controller_movement.cpp
LLMArena/src/llm/: oobabooga_bridge.cpp
LLMArena/src/memory/: memory_system.cpp  memory_system_helpers.cpp
LLMArena/src/rendering/: arena_renderer.cpp  gl_arena_highlighting.cpp  gl_arena_widget.cpp  gl_arena_widget_signals.cpp  voxel_highlight_renderer.cpp
LLMArena/src/ui/: arena_view.cpp  character_editor.cpp
LLMArena/src/voxel/: sky_astronomical.cpp  sky_astronomical_calculations.cpp  sky_system.cpp  sky_system_render.cpp  sky_system_shaders.cpp  voxel_renderer.cpp  voxel_system_integration.cpp  voxel_world.cpp
(+466 files in other folders)
